# libegl

./: .gitignore  Makefile.am  README  configure.ac  egl.c  egl.pc.in  glesv2.pc.in
include/: README
include/EGL/: eglplatform.h
